# USDCWatch

./: .env.example  .gitignore  Cargo.toml  PROJECT_REPORT.md  README.md  setup_database.sql  transfers.db
scripts/: setup.sh
src/: cli.rs  config.rs  database.rs  ethereum.rs  indexer.rs  lib.rs  main.rs  models.rs
