[package]
name = "ethereum-erc20-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0"
ethers-providers = "2.0"
ethers-core = "2.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
config = "0.13"
dotenvy = "0.15"